fixed footer spacing

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ svg {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-content: center;
 }
 .header {
 	background-color: var(--tertiary-1);
